--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "2.18.1"
   },
   "devDependencies": {
